Change theme as per symbol

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container">
       <h1>Welcome to LRM Pharma</h1>
-      <h2>medicines Pharmaceutical Products For Health Care.</h2>
+      <h2>An ISO 9001:2015 certified PCD pharma company and Third party pharma manfacturing company </h2>
     </div>
   </section><!-- End Hero -->
 
